# Zal-CPP

./: README.md
MainLibCTypes/: CMakeLists.txt  MainLibCTypes.vcxproj  ZalPythonItf.cpp
StandaloneAnalytics/: StandaloneAnalytics.cpp
